--- a/style.css
+++ b/style.css
@@ -28,3 +28,12 @@ section{
 body{
     margin:0%;
 }
+.link-button{
+   text-decoration: none;
+   background-image:linear-gradient(45deg,lightsalmon, tomato);
+   padding:10px 20px;
+   border-radius:5px; 
+   color: white;
+   font-weight:700;
+   
+}
